--- a/css/mediaProduction.css
+++ b/css/mediaProduction.css
@@ -346,13 +346,13 @@ button:hover{
 
 .row1 > img{
     position: absolute;
-    top: 5%;
+    top: 9%;
     left: 10%;
 }
 
 .row2 > img{
     position: absolute;
-    top: 5%;
+    top: 8.5%;
     left: 6%;
 }
 
@@ -374,7 +374,7 @@ button:hover{
     box-shadow: inset 13px 13px 30px 4px rgba(0, 0, 0, 0.25);
     height: 40%;
     width: 100%;
-    top: 550%;
+    top: 560%;
 }
 
 .footer > .footerLogo {
