--- a/css/websiteApps.css
+++ b/css/websiteApps.css
@@ -374,7 +374,7 @@ button:hover{
     box-shadow: inset 13px 13px 30px 4px rgba(0, 0, 0, 0.25);
     height: 40%;
     width: 100%;
-    top: 550%;
+    top: 560%;
 }
 
 .footer > .footerLogo {
